--- a/imroved_movie.html
+++ b/imroved_movie.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTD-8" />
-        <meta name=viewport content="width=device-width" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="movie_style.css" />
         <title>Image Gallery</title>
         </head>
